--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Developing FizzBuzz through TDD via Jasmine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "Yusaf Osei-Bonsu",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2"
   }
 }
